--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+<div id="score"></div>
 <canvas id="tetris" width="240" height="400"></canvas>
 <script src="javascript/logic.js"></script>
 </body>
