added styling, and instructions to play

--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Tetris</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Tetris</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Antic|Luckiest+Guy" rel="stylesheet">
 </head>
+
 <body>
-<div id="score"></div>
-<canvas id="tetris" width="240" height="400"></canvas>
-<script src="javascript/logic.js"></script>
+    <div id="instructions">
+        <h2>Tetris</h2>
+        <h3>Press the 'Left', 'Right', and 'Down' arrows on keyboard to maneuver the tetris, and the 'Q' and 'W' keys to flip the tetris. You get 10 points everytime a row is filled.</h3>
+    </div>
+    <div id="score"></div>
+    <canvas id="tetris" width="240" height="400"></canvas>
+    <script src="javascript/logic.js"></script>
 </body>
+
 </html>
